# Langchain_deployment

./: .env  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
