[project]
name = "langchain-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-core>=0.3.54",
    "langchain-groq>=0.3.2",
    "langserve>=0.3.1",
    "requests>=2.32.3",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.1",
]
